--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Rythm Game</title>
 </head>
 <body>
     <div class="layout">
+        <div id="notes"></div>
         <div class="btns">
             <div class="btn" id="d"><h1>D</h1></div>
             <div class="btn" id="f"><h1>F</h1></div>
