game over and score implemented!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Rythm Game</title>
 </head>
 <body>
+    <div class="scoreReact">
+	<h1>Score: <span id="scoreReact"></span></h1>
+    </div>
     <div class="layout">
         <div id="notes"></div>
         <div class="btns">
@@ -20,6 +23,8 @@
     </div>
     <div class="gameOver">
 	    <h1>Game Over :c</h1>
+	    <h1>Score: <span id="score"></span></h1>
+	    <button id="btnRest">Reintentar</button>
     </div>
     <script src="js/index.js"></script>
 </body>
